--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,10 +3,10 @@
     <button mat-button class="example-icon" aria-label="Example icon-button with menu icon">
       <a routerLink="/home"><img class="logo" src="../../../assets/pokeapi_logo.png" alt="Icone site"></a>
     </button>
-    <span><a routerLink="/home">Home</a></span>
-    <span><a routerLink="/pokedex">Pokedex</a></span>
-    <span><a routerLink="/moves">Moves</a></span>
-    <span><a routerLink="/items">Items</a></span>
+    <span><a mat-button routerLink="/home">Home</a></span>
+    <span><a mat-button routerLink="/pokedex">Pokedex</a></span>
+    <span><a mat-button routerLink="/moves">Moves</a></span>
+    <span><a mat-button routerLink="/items">Items</a></span>
     <span class="example-spacer"></span>
     <a href="https://github.com/Diagnoster/pokeapi-angular">
       <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
