--- a/src/app/components/abilities-details/abilities-details.component.css
+++ b/src/app/components/abilities-details/abilities-details.component.css
@@ -1,8 +1,20 @@
+mat-card {
+  justify-content: center; 
+  align-items: center
+}
+
 mat-card-title {
-    font-size: 23px;
-    padding-bottom: 3px;
-  }
-  
-  mat-card-subtitle {
-    padding-bottom: 3px;
-  }
+  font-size: 23px;
+  margin-bottom: 3px;
+  border-radius: 5px;
+  padding: 5px;
+  color: white;
+}
+
+mat-card-subtitle {
+  align-items: center;
+}
+
+.title {
+  align-items: center;
+}
