--- a/src/app/components/move-list/move-list.component.html
+++ b/src/app/components/move-list/move-list.component.html
@@ -34,33 +34,31 @@
       <!-- Power Column -->
       <ng-container matColumnDef="power">
         <th mat-header-cell *matHeaderCellDef>Power</th>
-        <td mat-cell *matCellDef="let move">{{ move.power }}</td>
+        <td mat-cell *matCellDef="let move"> {{ move.power }} </td>
       </ng-container>
       
       <!-- Accuracy Column -->
       <ng-container matColumnDef="accuracy">
         <th mat-header-cell *matHeaderCellDef>Accuracy</th>
-        <td mat-cell *matCellDef="let move">{{ move.accuracy }}</td>
+        <td mat-cell *matCellDef="let move"> {{ move.accuracy }} </td>
       </ng-container>
       
       <!-- PP Column -->
       <ng-container matColumnDef="pp">
         <th mat-header-cell *matHeaderCellDef>PP</th>
-        <td mat-cell *matCellDef="let move">{{ move.pp }}</td>
+        <td mat-cell *matCellDef="let move"> {{ move.pp }} </td>
       </ng-container>
       
       <!-- Expand Column-->
       <ng-container matColumnDef="expand">
         <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let move">
-          <button mat-icon-button aria-label="expand row" (click)="
-              expandedElement = expandedElement === move ? null : move;
-              $event.stopPropagation()
-            ">
+          <button mat-icon-button aria-label="expand row" (click)="(expandedElement = expandedElement === move ? null : move); $event.stopPropagation()">
             @if (expandedElement === move) {
-            <mat-icon>keyboard_arrow_up</mat-icon>
-            } @else {
-            <mat-icon>keyboard_arrow_down</mat-icon>
+              <mat-icon>keyboard_arrow_up</mat-icon>
+            }
+            @else {
+              <mat-icon>keyboard_arrow_down</mat-icon>
             }
           </button>
         </td>
@@ -82,10 +80,11 @@
         </td>
       </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let element; columns: columnsToDisplayWithExpand" class="example-element-row"
+      <tr mat-header-row *matHeaderRowDef="columnsToDisplayWithExpand"></tr>
+      <tr mat-row *matRowDef="let element; columns: columnsToDisplayWithExpand;" class="example-element-row"
         [class.example-expanded-row]="expandedElement === element"
-        (click)="expandedElement = expandedElement === element ? null : element"></tr>
+        (click)="expandedElement = expandedElement === element ? null : element">
+      </tr>
       <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
     </table>
     <mat-paginator [length]="dataSource.data.length" [pageSizeOptions]="[10]" showFirstLastButtons
