--- a/src/app/components/battle-setup/battle-setup.component.html
+++ b/src/app/components/battle-setup/battle-setup.component.html
@@ -1,87 +1,107 @@
 <div class="container">
     <div class="player-pokemon">
         <mat-card class="example-card">
-            @if (playerPokemon) {
+            @if (playerPokemon ) {
+            <div class="info-poke">
                 <mat-card-header>
-                <mat-card-title class="title" > {{ playerPokemon.name }} </mat-card-title>
-                <mat-card-subtitle>@for (poke of playerPokemon.types; track poke) {
-                    <div clas="type-info">
-                        <img class="type-icon" [src]="getTypeDetailImageUrl(poke.type.name)" alt="Tipo do Pokémon">
-                    </div>
-                }</mat-card-subtitle>
-                
+                    <mat-card-title class="title"> {{ upperFirstLetter(playerPokemon.name, false) }} </mat-card-title>
+                    <mat-card-subtitle>
+                        @for (poke of playerPokemon.types; track poke) {
+                        <div clas="type-info">
+                            <img class="type-icon" [src]="getTypeDetailImageUrl(poke.type.name)" alt="Tipo do Pokémon">
+                        </div>
+                        }
+                    </mat-card-subtitle>
                 </mat-card-header>
                 <img mat-card-image class="pokemon-artwork"
-                    src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/{{playerPokemon.id}}.png"
-                    alt="Imagem {{ playerPokemon.name }}">
-                <mat-card-content>
-                <p>
-                    The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-                    A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-                    bred for hunting.
-                </p>
-                </mat-card-content>
-                <mat-card-actions>
-                <button mat-button>LIKE</button>
-                <button mat-button>SHARE</button>
-                </mat-card-actions>
+                src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/{{playerPokemon.id}}.png"
+                alt="Imagem {{ playerPokemon.name }}">
+            </div>
+            <mat-card-content>
+                <div class="pokemon-stats">
+                    <span class="title-stat"> Stats </span>
+                    @for (stats of playerPokemon.stats; track stats) {
+                    <div class="stats">
+                        <span class="name-stat"> {{ upperFirstLetter(stats.stat.name) }} : {{ stats.base_stat }} </span>
+                        <mat-progress-bar class="progress-bar" mode="determinate"
+                            value="{{( stats.base_stat / 255) * 100 }}"></mat-progress-bar>
+                    </div>
+                    }
+                </div>
+            </mat-card-content>
             }
-          </mat-card>
+        </mat-card>
     </div>
     <div class="choose-pokemon">
         <mat-form-field>
             <mat-label>Search Pokémon</mat-label>
-            <input matInput [matAutocomplete]="autoPlayer" [(ngModel)]="selectedPokemonPlayer" placeholder="Filter a pokémon from the list">
+            <input matInput [matAutocomplete]="autoPlayer" [(ngModel)]="selectedPokemonPlayer"
+                placeholder="Filter a pokémon from the list">
             <button matSuffix mat-icon-button aria-label="Clear" (click)="clearInput('player')">
-            <mat-icon>cancel</mat-icon>
+                <mat-icon>cancel</mat-icon>
             </button>
-            <mat-autocomplete autoActiveFirstOption #autoPlayer="matAutocomplete" (optionSelected)="onPlayerOptionSelected($event)">
-            @for (poke of allPokemonListPlayer; track poke) {
+            <mat-autocomplete autoActiveFirstOption #autoPlayer="matAutocomplete"
+                (optionSelected)="onPlayerOptionSelected($event)">
+                @for (poke of allPokemonListPlayer; track poke) {
                 @if (poke.name.includes(selectedPokemonPlayer.toLowerCase())) {
                 <mat-option [value]="poke.name">
                     {{poke.name}}
                 </mat-option>
                 }
-            }
+                }
             </mat-autocomplete>
         </mat-form-field>
         <p> VS </p>
         <mat-form-field>
             <mat-label>Search Pokémon</mat-label>
-            <input matInput [matAutocomplete]="autoEnemy" [(ngModel)]="selectedPokemonEnemy" placeholder="Filter a pokémon from the list">
+            <input matInput [matAutocomplete]="autoEnemy" [(ngModel)]="selectedPokemonEnemy"
+                placeholder="Filter a pokémon from the list">
             <button matSuffix mat-icon-button aria-label="Clear" (click)="clearInput('enemy')">
-            <mat-icon>cancel</mat-icon>
+                <mat-icon>cancel</mat-icon>
             </button>
-            <mat-autocomplete autoActiveFirstOption #autoEnemy="matAutocomplete" (optionSelected)="onEnemyOptionSelected($event)">
-            @for (poke of allPokemonListEnemy; track poke) {
+            <mat-autocomplete autoActiveFirstOption #autoEnemy="matAutocomplete"
+                (optionSelected)="onEnemyOptionSelected($event)">
+                @for (poke of allPokemonListEnemy; track poke) {
                 @if (poke.name.includes(selectedPokemonEnemy.toLowerCase())) {
                 <mat-option [value]="poke.name">
                     {{poke.name}}
                 </mat-option>
                 }
-            }
+                }
             </mat-autocomplete>
         </mat-form-field>
     </div>
     <div class="enemy-pokemon">
         <mat-card class="example-card">
-            <mat-card-header>
-              <div mat-card-avatar class="example-header-image"></div>
-              <mat-card-title>Shiba Inu</mat-card-title>
-              <mat-card-subtitle>Dog Breed</mat-card-subtitle>
-            </mat-card-header>
-            <img mat-card-image class="pokemon-artwork" src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+            @if (enemyPokemon) {
+            <div class="info-poke">
+                <mat-card-header>
+                    <mat-card-title class="title"> {{ upperFirstLetter(enemyPokemon.name, false) }} </mat-card-title>
+                    <mat-card-subtitle>
+                        @for (poke of enemyPokemon.types; track poke) {
+                        <div clas="type-info">
+                            <img class="type-icon" [src]="getTypeDetailImageUrl(poke.type.name)" alt="Tipo do Pokémon">
+                        </div>
+                        }
+                    </mat-card-subtitle>
+                    <img mat-card-image class="pokemon-artwork"
+                    src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/{{enemyPokemon.id}}.png"
+                    alt="Imagem {{ enemyPokemon.name }}">
+                </mat-card-header>
+            </div>
             <mat-card-content>
-              <p>
-                The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-                A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-                bred for hunting.
-              </p>
+                <div class="pokemon-stats">
+                    <span class="title-stat"> Stats </span>
+                    @for (stats of enemyPokemon.stats; track stats) {
+                    <div class="stats">
+                        <span class="name-stat"> {{ upperFirstLetter(stats.stat.name) }} : {{ stats.base_stat }} </span>
+                        <mat-progress-bar class="progress-bar" mode="determinate"
+                            value="{{( stats.base_stat / 255) * 100 }}"></mat-progress-bar>
+                    </div>
+                    }
+                </div>
             </mat-card-content>
-            <mat-card-actions>
-              <button mat-button>LIKE</button>
-              <button mat-button>SHARE</button>
-            </mat-card-actions>
-          </mat-card>
+            }
+        </mat-card>
     </div>
 </div>
