--- a/src/app/components/battle-setup/battle-setup.component.css
+++ b/src/app/components/battle-setup/battle-setup.component.css
@@ -15,7 +15,6 @@
 
 .enemy-pokemon {
   width: 100%;
-
 }
 
 .example-card {
@@ -42,8 +41,24 @@ mat-card-header {
 }
 
 mat-card-title {
-  font-size: 23px;
+  font-size: 20px;
   margin-bottom: 2px;
+}
+
+.title-choose {
+  align-items: center;
+  width: 100%;
+}
+
+.pokemon-empty {
+  display: flex;
+  background-color: white;
+  width: calc(94% - 6%);
+  margin: 3%;
+  border-radius: 10px;
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
 }
 
 .info-poke {
@@ -53,8 +68,15 @@ mat-card-title {
   flex: 1;
 }
 
+.pokemon-stats {
+  align-items: center;
+  margin-top: 1em;
+}
+
 mat-card-content {
-  flex: 1
+  flex: 1;
+  align-items: center;
+  justify-content: center;
 }
 
 mat-progress-bar {
