adjust input for import component

--- a/src/app/components/pokemon-details/pokemon-details.component.html
+++ b/src/app/components/pokemon-details/pokemon-details.component.html
@@ -38,7 +38,7 @@
           </div>
         }
       </mat-card-content>
-      <app-moves></app-moves>
+      <app-moves [pokemon]="pokemon"></app-moves>
     </mat-card>
   </div>
   
