adjust poke details move list

--- a/src/app/components/pokemon-details/pokemon-details.component.css
+++ b/src/app/components/pokemon-details/pokemon-details.component.css
@@ -19,14 +19,12 @@
   padding-top: 9px;
 }
 
-.example-header-image {
-  font-size: 22px;
-  padding-top: 7px;
-  width: 12%;
-}
-
 .pokemon-info-container {
   display: flex;
+}
+
+app-moves {
+  margin-top: -3%;
 }
 
 .pokemon-artwork {
