--- a/src/app/components/item-list/item-list.component.html
+++ b/src/app/components/item-list/item-list.component.html
@@ -1,11 +1,7 @@
 <div class="container">
   <div class="content">
     @if (loading) {
-      <div class="loading">
-        <img class="pokeball pokeball-spinner" src="../../../assets/pokeball.png" alt="pokeball">
-      </div>
-      <p>Loading...</p>
-      <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+      <app-loading></app-loading>
     }
     <button class="main-button" mat-raised-button color="primary" [matMenuTriggerFor]="items">
       <mat-icon>list</mat-icon>
