--- a/src/app/components/moves/moves.component.html
+++ b/src/app/components/moves/moves.component.html
@@ -36,7 +36,11 @@
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    <tr mat-row 
+      (click)="clicked(row)"
+      [class.demo-row-is-clicked]="clickedRows.has(row)"
+      *matRowDef="let row; columns: displayedColumns">
+    </tr>
 
     <!-- Row shown when there is no matching data. -->
     <tr class="mat-row" *matNoDataRow>
@@ -45,4 +49,13 @@
       </td>
     </tr>
   </table>
+  @if (!clickedRows.size) {
+    <div>Clicked rows will be logged here</div>
+  }
+  
+  <ul>
+    @for (clickedRow of clickedRows; track clickedRow) {
+      <li>Clicked on {{clickedRow.name}}</li>
+    }
+  </ul>
 </div>
