refactoring class name

--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -29,12 +29,8 @@ span {
   margin-right: 2em;
 }
 
-.example-spacer {
+.spacer {
   flex: 1 1 auto;
-}
-
-.example-icon {
-  color: red;
 }
 
 .selected {
