--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,15 +1,15 @@
 <mat-toolbar #toolbar>
   <mat-toolbar-row class="main-header">
-    <button mat-button class="example-icon" aria-label="Example icon-button with menu icon">
+    <button mat-button>
       <a routerLink="/home"><img class="logo" src="../../../assets/pokeapi_logo.png" alt="Icone site"></a>
     </button>
     <span [ngClass]="{'selected': selectedSpan === 'home'}"><a mat-button routerLink="/home" (click)="selectSpan('home')">Home</a></span>
     <span [ngClass]="{'selected': selectedSpan === 'pokedex'}"><a mat-button routerLink="/pokedex" (click)="selectSpan('pokedex')">Pokedex</a></span>
     <span [ngClass]="{'selected': selectedSpan === 'moves'}"><a mat-button routerLink="/moves" (click)="selectSpan('moves')">Moves</a></span>
     <span [ngClass]="{'selected': selectedSpan === 'items'}"><a mat-button routerLink="/items" (click)="selectSpan('items')">Items</a></span>
-    <span class="example-spacer"></span>
+    <span class="spacer"></span>
     <a href="https://github.com/Diagnoster/pokeapi-angular">
-      <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+      <button mat-icon-button class="favorite-icon" aria-label="Favorite icon">
         <mat-icon>favorite</mat-icon>
       </button>
     </a>
