--- a/src/app/components/battle-setup/battle-setup.component.html
+++ b/src/app/components/battle-setup/battle-setup.component.html
@@ -30,10 +30,10 @@
                     </div>
                 </mat-card-content>
             </mat-card>
-            <div class="moveset">
+            <div class="move-set">
                 @for(move of selectedMoves; track move) {
-                    <mat-card>
-                        <mat-card-content>{{move.name}}</mat-card-content>
+                    <mat-card class="move-name">
+                        <mat-card-content>{{ upperFirstLetter(move.name, false) }}</mat-card-content>
                     </mat-card>
                 }
             </div>
