--- a/src/app/components/moves/moves.component.css
+++ b/src/app/components/moves/moves.component.css
@@ -30,3 +30,17 @@ mat-paginator {
 .title-move {
     text-align: center;
 }
+
+.mat-mdc-row:hover .mat-mdc-cell {
+    border-color: currentColor;
+}
+
+.demo-row-is-clicked {
+    font-weight: bold;
+}
+
+.mat-mdc-row .mat-mdc-cell {
+    border-bottom: 1px solid transparent;
+    border-top: 1px solid transparent;
+    cursor: pointer;
+}
