--- a/src/app/components/battle-setup/battle-setup.component.css
+++ b/src/app/components/battle-setup/battle-setup.component.css
@@ -6,7 +6,7 @@
 .choose-pokemon {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: start;
 }
 
 .select-pokemon {
@@ -27,6 +27,16 @@
 .pokemon-artwork {
   width: 150px;
   height: auto;
+}
+
+.vs-image {
+  width: 230px;
+  height: auto;
+}
+
+.battle-button {
+  background-color: #3F51B5;
+  color: white;
 }
 
 .type-icon {
